ApiContext + ApiTemplate integration across SDK, core, engine, adapters